<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_bin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="4571 7360" />

    <TextView
        android:id="@+id/scheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/scheme_network"
        android:textColor="@color/tv_title_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bin" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/type"
        android:textColor="@color/tv_title_color"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/scheme"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_scheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/scheme"
        app:layout_constraintTop_toBottomOf="@+id/scheme"
        tools:text="@string/visa" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/type"
        app:layout_constraintTop_toBottomOf="@+id/type"
        tools:text="@string/debit" />

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/brand"
        android:textColor="@color/tv_title_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_scheme" />

    <TextView
        android:id="@+id/prepaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/prepaid"
        android:textColor="@color/tv_title_color"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/brand"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/brand"
        app:layout_constraintTop_toBottomOf="@+id/brand"
        tools:text="@string/visa_dankort" />

    <TextView
        android:id="@+id/tv_prepaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/prepaid"
        app:layout_constraintTop_toBottomOf="@+id/prepaid"
        tools:text="@string/no" />

    <TextView
        android:id="@+id/card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/card_number"
        android:textColor="@color/tv_title_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_brand" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/country"
        android:textColor="@color/tv_title_color"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/card_number"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/country"
        tools:text="@string/denmark" />

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textColor="@color/tv_title_color"
        app:layout_constraintStart_toStartOf="@+id/card_number"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/luhn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/luhn"
        android:textColor="@color/tv_title_color"
        app:layout_constraintStart_toEndOf="@+id/length"
        app:layout_constraintTop_toTopOf="@+id/length" />

    <TextView
        android:id="@+id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/length"
        app:layout_constraintTop_toBottomOf="@+id/length"
        tools:text="@string/_15" />

    <TextView
        android:id="@+id/tv_luhn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="@+id/luhn"
        app:layout_constraintTop_toBottomOf="@+id/luhn" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_56_longitude_10"
        app:layout_constraintStart_toStartOf="@+id/tv_country"
        app:layout_constraintTop_toBottomOf="@+id/tv_country" />

    <TextView
        android:id="@+id/bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bank"
        app:layout_constraintEnd_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_longitude" />

    <TextView
        android:id="@+id/tv_bank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="@+id/bank"
        app:layout_constraintTop_toBottomOf="@+id/bank"
        tools:text="@string/jyske_bank_hj_rring" />

    <TextView
        android:id="@+id/tv_bank_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="@+id/tv_bank_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_bank_name"
        tools:text="@string/www_jyskebank_dk" />

    <TextView
        android:id="@+id/tv_bank_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/purple_500"
        android:text="@string/_4589893300"
        app:layout_constraintStart_toStartOf="@+id/tv_bank_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_bank_url" />

</androidx.constraintlayout.widget.ConstraintLayout>